--- a/test-output/old/autotest/classes.html
+++ b/test-output/old/autotest/classes.html
@@ -11,15 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>contextLoads</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>loginTest002</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getRequirementListTest001</td>
+<td>loginTest001</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginTest001</td>
+<td>getRequirementListTest001</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
