--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,16 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">autotest</th></tr>
-<tr><td><a href="#t0">allTestsInAPackage</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">1</td><td class="num">991</td><td></td><td></td></tr>
+<tr><td><a href="#t0">allTestsInAPackage</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">2,206</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">autotest</th></tr></tbody><tbody id="t0"><tr><th colspan="4">allTestsInAPackage &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">org.example.AppTest</td><td><a href="#m0">loginTest002</a></td><td rowspan="1">1685434201110</td><td rowspan="1">20</td></tr><tr><th colspan="4">allTestsInAPackage &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">org.example.AppTest</td><td><a href="#m1">getRequirementListTest001</a></td><td rowspan="1">1685434200174</td><td rowspan="1">910</td></tr><tr class="passedeven"><td><a href="#m2">loginTest001</a></td><td rowspan="1">1685434201088</td><td rowspan="1">22</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">autotest</th></tr></tbody><tbody id="t0"><tr><th colspan="4">allTestsInAPackage &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">org.example.AppTest</td><td><a href="#m0">contextLoads</a></td><td rowspan="1">1685505471049</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m1">getRequirementListTest001</a></td><td rowspan="1">1685505471061</td><td rowspan="1">2102</td></tr><tr class="passedeven"><td><a href="#m2">loginTest001</a></td><td rowspan="1">1685505473165</td><td rowspan="1">41</td></tr><tr class="passedeven"><td><a href="#m3">loginTest002</a></td><td rowspan="1">1685505473208</td><td rowspan="1">18</td></tr></tbody>
 </table>
-<h2>allTestsInAPackage</h2><h3 id="m0">org.example.AppTest#loginTest002</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [10] but found [0]
-	at org.example.AppTest.loginTest002(AppTest.java:43)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>allTestsInAPackage</h2><h3 id="m0">org.example.AppTest#contextLoads</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">org.example.AppTest#getRequirementListTest001</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">org.example.AppTest#loginTest001</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">org.example.AppTest#loginTest002</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
