--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-autotest">
-              <span class="suite-name border-failed">autotest</span>
+              <span class="suite-name border-passed">autotest</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-autotest" class="hide-methods failed suite-autotest"> (hide)</a> <!-- hide-methods failed suite-autotest -->
-                      <a href="#" panel-name="suite-autotest" class="show-methods failed suite-autotest"> (show)</a> <!-- show-methods failed suite-autotest -->
-                    </span>
-                    <div class="method-list-content failed suite-autotest">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-autotest" title="org.example.AppTest" hash-for-method="loginTest002">loginTest002</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-autotest -->
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -116,12 +102,22 @@
                     <div class="method-list-content passed suite-autotest">
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-autotest" title="org.example.AppTest" hash-for-method="contextLoads">contextLoads</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-autotest" title="org.example.AppTest" hash-for-method="getRequirementListTest001">getRequirementListTest001</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-autotest" title="org.example.AppTest" hash-for-method="loginTest001">loginTest001</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-autotest" title="org.example.AppTest" hash-for-method="loginTest002">loginTest002</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-autotest -->
@@ -136,35 +132,19 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-autotest" class="panel autotest">
-          <div class="suite-autotest-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">org.example.AppTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginTest002">
-                  </a> <!-- loginTest002 -->
-                  <span class="method-name">loginTest002</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [10] but found [0]
-	at org.example.AppTest.loginTest002(AppTest.java:43)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
-... Removed 27 stack frames
-</div> <!-- stack-trace -->
-                  <em>
-(登录成功)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-autotest-class-failed -->
           <div class="suite-autotest-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">org.example.AppTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="contextLoads">
+                  </a> <!-- contextLoads -->
+                  <span class="method-name">contextLoads</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="getRequirementListTest001">
@@ -179,6 +159,15 @@
                   <span class="method-name">loginTest001</span>
                   <em>
 (用户名或密码错误)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginTest002">
+                  </a> <!-- loginTest002 -->
+                  <span class="method-name">loginTest002</span>
+                  <em>
+(登录成功)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -235,24 +224,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'getRequirementListTest001')
 data.setCell(0, 2, 'org.example.AppTest')
-data.setCell(0, 3, 910);
+data.setCell(0, 3, 2102);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginTest001')
 data.setCell(1, 2, 'org.example.AppTest')
-data.setCell(1, 3, 22);
+data.setCell(1, 3, 41);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'loginTest002')
 data.setCell(2, 2, 'org.example.AppTest')
-data.setCell(2, 3, 20);
+data.setCell(2, 3, 18);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'contextLoads')
+data.setCell(3, 2, 'org.example.AppTest')
+data.setCell(3, 3, 11);
 window.suiteTableData['autotest']= { tableData: data, tableDiv: 'times-div-autotest'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 952 ms</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-autotest">
               </div> <!-- times-div-autotest -->
             </div> <!-- times-div -->
@@ -280,18 +273,20 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">org.example.AppTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">getRequirementListTest001</span>
+                <span class="method-name">contextLoads</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">loginTest001</span>
-                <span class="method-start">914 ms</span>
+                <span class="method-name">getRequirementListTest001</span>
+                <span class="method-start">12 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
+                <span class="method-name">loginTest001</span>
+                <span class="method-start">2116 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">loginTest002</span>
-                <span class="method-start">936 ms</span>
+                <span class="method-start">2159 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
